--- a/style.css
+++ b/style.css
@@ -1,83 +1,216 @@
 @import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400;600&family=Lato:wght@400;700&family=Quicksand:wght@300;400;600&display=swap');
-.spacer{
-    height:100vw;
-}
-*{
+
+* {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    border: border-box;
     background-color: aliceblue;
-    /* background-color: black; */
 }
-.body-div{
+
+.body-div {
     font-size: 16px;
     font-family: 'AR One Sans', sans-serif;
+    width: 100%;
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'Quicksand', sans-serif;*/
 }
-.head{
-    /* border: 1px solid black; */
-    position:fixed;
+
+.head {
+    position: fixed;
     width: 100%;
     margin: 0px 0px 5px 0px;
-    border-radius: 30px;
+    z-index: 1;
     /* color: white; */
 }
-.head div{
+
+.head div {
     /* border: 1px red solid; */
     font-size: 14px;
     padding: 5px;
-    display:flex;
-    justify-content:left;
-    align-items:center;
+    display: flex;
+    justify-content: left;
+    align-items: center;
 }
-.head div img{
-    margin:0px 10px 0px 5px;
+
+.head div img {
+    margin: 0px 10px 0px 5px;
     width: 140px;
+    height: 50.46;
 }
-.nav{
-    background-color:rgb(148, 255, 251);
+
+.nav {
+    background-color: rgb(148, 255, 251);
     font-size: 22px;
     font-family: 'Quicksand', sans-serif;
-    font-weight:600;
+    font-weight: 600;
     padding: 2px;
     margin: 2px 10px;
     border-radius: 35px;
 }
-.nav ul{
-    background-color:inherit;
+
+.nav ul {
+    background-color: inherit;
     list-style: none;
     display: flex;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
     align-items: center;
-    flex-flow:row wrap;
-    border-radius: 90px;  
-}
-.nav ul li{
+    flex-flow: row wrap;
     border-radius: 90px;
-    background-color:inherit;
+}
+
+.nav ul li {
+    border-radius: 90px;
+    background-color: inherit;
     position: relative;
     margin: 3px;
 }
-.nav ul li a{
-    background-color:transparent;
+
+.nav ul li a {
+    background-color: transparent;
     border-radius: 100px;
-    color:rgb(0, 0, 0);
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
-.nav ul li input{
+
+.nav ul li input {
     width: 100%;
     position: relative;
-    background-color:azure;
-    font-size:20px;
-    border-radius:20px;
-    padding:0px 10px;
-}
-.nav a:hover ,a:active{
-    color:rgb(168, 4, 4);
+    background-color: azure;
     font-size: 20px;
+    border-radius: 20px;
+    padding: 0px 10px;
 }
-main{
+
+.nav a:hover,
+a:active {
+    color: rgb(175, 28, 28);
+    text-decoration: underline;
+    position: relative;
+    bottom: 2px;
+}
+
+.outer-box {
     border: 2px solid black;
-    position:absolute;
+    position: absolute;
+    top: 15%;
+    width: 100%;
+    margin: 0;
+}
+
+.home-box {
+    border: 1px solid red;
+    height: 100vh;
+    margin: 1px;
+}
+
+.event-box {
+    border: 5px solid;
+    display: flex;
+    justify-content: left;
+    flex-flow: row nowrap;
+}
+
+.event-box aside {
+    border: 2px solid green;
+    height: 100vh;
+    width: 25vw;
+    margin: 1px;
+}
+
+.event-box section {
+    border: 2px solid indigo;
+    height: 100vh;
+    width: 75vw;
+    margin: 1px;
+}
+
+.registration-outer-box {
+    border: 5px solid;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(to top right, rgb(255, 255, 255), rgb(33, 208, 202));
+}
+
+.registration-inner-box {
+    border: 2px solid red;
+    height: auto;
+    width: 60vw;
+}
+
+.registration-top {
+    border: 1px solid green;
+    padding: 20px 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.registration-top img {
+    width: 30%;
+}
+
+.registration-top span h2 {
+    font-size: 30px;
+    text-decoration: underline;
+}
+
+.registration-main {
+    border: 2px solid;
+    padding: 20px 30px;
+}
+
+.registration-main form {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.registration-main form label {
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.registration-main form input,
+select {
+    font-size: 20px;
+    width: 90%;
+    padding: 6px;
+    margin: 3px 10px 10px 4px;
+    border-radius: 5px;
+}
+
+.registration-main form input:hover,
+select:hover,
+button:hover {
+    border-color: rgb(241, 171, 65);
+}
+
+.registration-main span {
+    margin: 0px 10px 0px 0px;
+}
+
+.form-flex {
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.button {
+    width: 150px;
+    margin: 20px 0px 0px 0px;
+}
+
+.footer-box {
+    border: 2px solid rgb(0, 0, 0);
+    background-color: rgb(148, 255, 251);
+    height: 30vh;
+}
+
+.footer-box div {
+    background-color: rgb(148, 255, 251);
 }
