--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@
 * {
     padding: 0;
     margin: 0;
-    border: border-box;
+    box-sizing: border-box;
     background-color: rgb(255, 255, 255);
 }
 .body-div {
     font-size: 16px;
     font-family: 'AR One Sans', sans-serif;
-    width: 100vw;
+    width: 100%;
+    min-height: 100vh;
     padding-top: 7%;
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'Quicksand', sans-serif;*/
@@ -43,11 +44,11 @@
 
 .nav {
     background-color: rgb(9, 9, 9);
-    font-size: 22px;
+    font-size: 23px;
     font-family: 'Quicksand', sans-serif;
     font-weight: 600;
     padding: 2px;
-    margin: 2px 10px;
+    margin: 1px 10px;
     border-radius: 35px;
 }
 
@@ -62,7 +63,6 @@
 }
 
 .nav ul li {
-    border-radius: 90px;
     background-color: transparent;
     position: relative;
     margin: 3px;
@@ -70,7 +70,6 @@
 
 .nav ul li a {
     background-color: transparent;
-    border-radius: 100px;
     color: white;
     text-decoration: none;
 }
@@ -93,9 +92,6 @@ a:active {
 }
 
 .outer-box {
-    border: 2px solid black;
-    position: absolute;
-    /* top: 15%; */
     width: 100%;
     margin: 0;
 }
@@ -105,8 +101,7 @@ a:active {
     background-size:cover;
     background-blend-mode:luminosity;
     background-color: rgb(186, 248, 255);
-    /* border: 1px solid red; */
-    min-height: 100vh;
+    min-height: 90vh;
     margin: 1px;
 }
 .home-box marquee{
@@ -115,7 +110,7 @@ a:active {
     color: white;
     font-size: 50px;
     position:absolute;
-    top: 20vh;
+    top: 36vh;
     font-weight: bolder;
     color: rgb(255, 255, 255);
     /* border: 2px solid rgb(255, 255, 255); */
@@ -131,58 +126,65 @@ a:active {
 
 .event-box aside {
     border: 2px solid green;
-    height: 100vh;
+    min-height: 100vh;
     width: 25vw;
     margin: 1px;
 }
 
 .event-box section {
     border: 2px solid indigo;
-    height: 100vh;
+    min-height: 100vh;
     width: 75vw;
     margin: 1px;
 }
 
 .registration-outer-box {
     /* border: 5px solid; */
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(to top right, rgb(255, 255, 255), rgb(37, 236, 229));
+    background: linear-gradient(45deg, rgb(24, 193, 219),rgb(216, 215, 246),rgb(113, 239, 239),rgb(37, 236, 229),rgb(208, 211, 255),rgb(0, 200, 255));
 }
 
 .registration-inner-box {
-    border-radius: 60px;
     width: 60vw;
+    min-height: 75vh;
+    border-radius: 40px;
+    background-color: transparent;
+    box-shadow: 5px 5px 30px rgb(0, 0, 0);
 }
 .registration-inner-box:hover{
-    box-shadow: 5px 5px 30px rgb(0, 0, 0);
+    box-shadow: 5px 5px 500px rgb(202, 160, 253);
 }
 
 .registration-top {
-    /* border: 1px solid rgb(0, 0, 0); */
-    border-radius: 20px;
+    background-color:rgb(215, 235, 254);
+    border-radius: 30px;
     padding: 20px 30px;
     display: flex;
     justify-content: space-between;
     flex-flow: row wrap;
     align-items: center;
+    position:relative;
+    top: 5vh;
 }
 
 .registration-top img {
     width: 30%;
 }
 
-.registration-top span h2 {
-    font-size: 30px;
+.registration-top span,h2{
+    font-size: 25px;
     text-decoration: underline;
+    background-color: transparent;
 }
 
 .registration-main {
-    border: 2px solid;
-    border-radius: 20px;
+    border-radius: 30px;
     padding: 20px 30px;
+    position:relative;
+    top: 5vh;
 }
 
 .registration-main form {
