--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
+    /* scroll-behavior: smooth; */
+    scroll-padding-top: 10vh;
 }
 
 .body-div {
@@ -12,7 +14,7 @@
     font-family: "AR One Sans", sans-serif;
     width: 100%;
     min-height: 100vh;
-    padding-top: 7%;
+    /* padding-top: 7%; */
     /* font-family: 'Lato', sans-serif; */
     /* font-family: 'Quicksand', sans-serif;*/
 }
@@ -20,27 +22,23 @@
 .head {
     position: fixed;
     width: 100%;
-    top: 0;
-    margin: 0px 0px 5px 0px;
+    top: 0px;
     z-index: 9999999;
     background-color: rgb(255, 255, 255);
-    /* color: white; */
 }
 
 .head div {
-    /* border: 1px red solid; */
     font-size: 14px;
-    padding: 5px;
     display: flex;
     justify-content: left;
     align-items: center;
-    background-color: transparent;
+    background-color:transparent;
 }
 
 .head div img {
     margin: 0px 10px 0px 5px;
-    width: 140px;
-    height: 50.46;
+    width:140px;
+    height:46.46px;
 }
 
 .nav {
@@ -55,25 +53,25 @@
 
 .nav ul {
     background-color: inherit;
-    list-style: none;
+    list-style-type:none;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     flex-flow: row wrap;
     border-radius: 90px;
 }
-
-.nav ul li {
-    background-color: transparent;
-    position: relative;
-    margin: 3px;
-}
-
-.nav ul li a {
-    background-color: transparent;
+.navigator li a{
     color: white;
     text-decoration: none;
     transition: 0.5s;
+    margin: 100px 0px;
+}
+.navigator a:hover,
+a:active{
+    color: rgb(0, 255, 255);
+    text-decoration: underline;
+    position: relative;
+    bottom: 2px;
 }
 
 .nav ul li input {
@@ -85,13 +83,6 @@
     padding: 0px 10px;
 }
 
-.nav a:hover,
-a:active {
-    color: rgb(0, 255, 255);
-    text-decoration: underline;
-    position: relative;
-    bottom: 2px;
-}
 
 .home-box {
     background-image: url(images/home-bg.jpg);
@@ -99,7 +90,7 @@ a:active {
     background-blend-mode: luminosity;
     background-color: rgb(186, 248, 255);
     min-height: 90vh;
-    margin: 1px;
+    margin-top: 10vh;
 }
 
 .home-box marquee {
@@ -117,39 +108,83 @@ a:active {
 }
 
 .event-box {
-    border: 5px solid;
+    /* border: 5px solid; */
     display: flex;
     justify-content: left;
     flex-flow: row nowrap;
+    position: relative;
+    height: auto;
 }
 
 .event-box aside {
-    border: 2px solid green;
-    min-height: 100vh;
-    width: 25vw;
-    margin: 1px;
+    /* border: 2px solid green; */
+    background-color: rgb(0, 0, 0);
+    min-height: 95vh;
+    max-height: 95vh;
+    width: auto;
+    padding: 20px;
+    position: sticky;
+    top: 10%;
+}
+
+.event-box aside ul{
+    display: flex;
+    flex-flow: column nowrap;
+    list-style: none;
+    justify-content: center;
+    align-items:flex-start;
+}
+.event-box aside li{
+    font-size: 20px;
+    margin: 30px 40px 2px 5px;
+    padding: 4px;
+    width: 100%;
+    height: 5vh;
+    box-shadow: 0px 0px 10px rgb(18, 146, 146);
+    border-radius: 10%;
+    transition: ease-in-out 0.2s;
+}
+
+.event-box aside li:hover{
+    background-color: rgb(55, 55, 55);
 }
 
 .event-box section {
-    border: 2px solid indigo;
-    min-height: 100vh;
-    width: 75vw;
-    margin: 1px;
+    /* border: 2px solid indigo; */
+    min-height: 200vh;
+    width: 100%;
+    position: relative;
+    background: linear-gradient(0deg,
+            rgb(0, 200, 255),
+            rgb(111, 213, 247),
+            rgb(98, 246, 246),
+            rgb(103, 252, 247),
+            rgb(98, 246, 246),
+            rgb(111, 213, 247),
+            rgb(0, 200, 255));
+    box-shadow: 0px 0px 5px black;
+    display: flex;
+    align-items: center;
+    flex-flow: column nowrap;
+    padding-top: 8vh;
 }
+.card-box{
 
+
+}
 .registration-outer-box {
     /* border: 5px solid; */
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(45deg,
-            rgb(24, 193, 219),
-            rgb(222, 221, 243),
-            rgb(113, 239, 239),
+    background: linear-gradient(0deg,
+            rgb(0, 200, 255),
+            rgb(111, 213, 247),
+            rgb(98, 246, 246),
             rgb(103, 252, 247),
             rgb(98, 246, 246),
-            rgb(216, 219, 255),
+            rgb(111, 213, 247),
             rgb(0, 200, 255));
 }
 
@@ -157,8 +192,7 @@ a:active {
     width: 60vw;
     padding: 3% 0;
     border-radius: 40px;
-    background-color: transparent;
-    box-shadow: 0px -5px 40px rgb(176, 152, 194);
+    background-color: rgba(255, 255, 255, 0.515);
     transition:0.2s;
 }
 
