add- responsive design-changes

--- a/style.css
+++ b/style.css
@@ -13,11 +13,6 @@
     #home{
         background-image: url(images/home-bg_mobile.jpg) !important;
         background-size:contain !important;
-        background-blend-mode: luminosity;
-        background-color: rgba(35, 155, 157, 0.79);
-        min-height: 90vh;
-        margin-top: 10vh;
-        filter:brightness(80%);
     }
     .head div{
         margin-left: 4px;
@@ -30,21 +25,24 @@
         display: none !important;
     }
     .nav{
-        font-size: 16px !important;
+        width: 100% !important;
+        font-size: 14px !important;
+        margin: 1px 1px !important;
     }
     .event-box aside{
         display: none;
     }
     .card-box{
         flex-flow: column wrap !important;
+        width: 100% !important;
     }
     .card{
-        width: 60vw !important;
+        width: 80vw !important;
         height: 30vh !important;
     }
     .registration-inner-box{
         margin: 20px 0px;
-        width: 85vw !important;
+        width: 100vw !important;
     }
     .footer-icon{
         width: 90vw !important;
