--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@
     scroll-padding-top: 10vh;
 }
 
+@keyframes text{
+    from{
+        text-shadow: 0px 0px 10px rgb(255, 0, 0);
+    }
+    to{
+        box-shadow: 5px 10px 10px rgb(118, 115, 126);
+    }
+}
+
 .body-div {
     font-size: 16px;
     font-family: "AR One Sans", sans-serif;
@@ -96,7 +105,6 @@ a:active{
     background-blend-mode: luminosity;
     background-color: rgba(35, 155, 157, 0.79);
     min-height: 90vh;
-    margin-top: 10vh;
     filter:brightness(80%);
 }
 
@@ -113,6 +121,7 @@ a:active{
     /* border: 2px solid rgb(255, 255, 255); */
     box-shadow: 0px 5px 10px rgb(67, 255, 255);
     text-shadow: 0px -2px 10px rgb(67, 255, 255);
+    animation: text 1s ease-in-out 0.1s infinite alternate-reverse;
 }
 
 .event-box {
@@ -218,14 +227,13 @@ a:active{
 .card:hover{
     background-color: rgba(181, 179, 179, 0.384);
     box-shadow: 0px 0px 10px black;
-    transition: all ease-in-out 0.3s 0.1s;
+    transition: all ease-in-out 0.3s 0s;
     transform: scale(110%);
 }
 .card:active{
     background-color: rgb(73, 71, 71);
     box-shadow: 0px 0px 0px black;
-    height: 24vh;
-    transition: all ease-in-out 0.2s 0.1s;
+    transition: all ease-in-out 0.2s 0s;
     transform: scale(100%);
 }
 .card:hover h3{
@@ -400,13 +408,10 @@ button:hover {
 
 
 @media only screen and (max-width:800px){
-    #home{
-        background-image: url(images/home-bg_mobile.jpg) !important;
-        background-size:contain !important;
-    }
     .head div{
         margin-left: 4px;
         font-size: 3px;
+        height: 3.5vh;
     }
     .head h1{
         display: none;
@@ -423,17 +428,72 @@ button:hover {
         width: 100% !important;
         font-size: 14px !important;
         margin: 1px 1px !important;
+        border-radius: 0;
+    }
+    #home{
+        background-image: url(images/home-bg_mobile.jpg) !important;
+        background-size:contain !important;
+    }
+    .home-box{
+        margin-top: 5vh;
+    }
+    .home-box marquee {
+        font-size: 35px;
+
+    }
+    .event-head h2{
+        font-size: 28px;
+    }
+    .event-container{
+        margin: 20px 0px;
+    }
+    .event-container>h2{
+        text-decoration: none;
+        font-size: 26px;
+        text-align: center;
     }
     .event-box aside{
         display: none;
     }
     .card-box{
-        flex-flow: column wrap !important;
-        width: 100% !important;
+        width: 100vw !important;
+        padding-left: 0;
     }
     .card{
-        width: 80vw !important;
-        height: 30vh !important;
+        width: 45vw !important;
+        height: 20vh !important;
+        line-height: 32px;
+        margin-right: 0;
+        margin-left: 10px;
+    }
+    .card h3{
+        font-size: 26px;
+        margin-bottom: 10px;
+    }
+    .card:hover{
+        background-color: rgba(181, 179, 179, 0.384);
+        box-shadow: 0px 0px 10px black;
+        transition: all ease-in-out 0.3s 0.1s;
+        transform: scale(105%);
+    }
+    .card:active{
+        background-color: rgb(73, 71, 71);
+        box-shadow: 0px 0px 0px black;
+        transition: all ease-in-out 0.2s 0s;
+        transform: scale(100%);
+    }
+    .card:hover h3{
+        transition: all ease-in-out 0.6s 0.1s;
+        font-size: 32px;
+        color: white;
+        background-color: black;
+    }
+    .card:hover div{
+        transition: all ease-in-out 0.5s 0.1s;
+        font-size: 20px;
+    }
+    .card:hover::after{
+        content: none;
     }
     .registration-inner-box{
         margin: 20px 0px;
